--- a/index.html
+++ b/index.html
@@ -1,32 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vite App</title>
   </head>
   <body>
-    <div id="root">
-      <button @click="handleRandomBookClick">Generate Random Book</button>
-      <div style="display: flex">
-        <ul>
-          <book-item
-            v-for="book in books"
-            :book="book"
-            :key="book.id"
-            @on-delete-click="handleDeleteBookClick"
-          ></book-item>
-        </ul>
-      </div>
-    </div>
-
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="js/main.js"></script>
-    <script src="components/book.js"></script>
-
-    <script>
-      app.mount("#root");
-    </script>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
